# htcw_data

./: CMakeLists.txt  README.md  htcw_data.h  htcw_data.hpp  idf_component.yml  library.json  library.properties
examples/demo/: platformio.ini
include/: htcw_data.hpp
